--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="http://fonts.cdnfonts.com/css/gt-walsheim" rel="stylesheet">
+    <!-- <link href="http://fonts.cdnfonts.com/css/gt-walsheim" rel="stylesheet"> -->
+    
+ 
  
 
   
